fix(InputView): 메뉴 문자열 끝에 "," 예외처리 안되는 문제 수정
수정된 정규식 주의점
- 그룹을 캡처할 필요가 없어서 Non-capturing group을 사용한다. (?:)
- 백트래킹을 사용하지 않기 위해 Possessive quantifiers를 사용한다 *+